batch create and read files

--- a/server/package.json
+++ b/server/package.json
@@ -10,7 +10,9 @@
   "license": "ISC",
   "dependencies": {
     "exec": "^0.2.1",
+    "log-rotate": "^0.2.7",
     "nginx-log-parser": "0.0.4",
+    "node-dir": "^0.1.12",
     "os-monitor": "^1.0.4",
     "request-headers": "^1.0.0"
   }
