--- a/client/package.json
+++ b/client/package.json
@@ -1,15 +1,63 @@
 {
-  "name": "monitorClient",
-  "version": "0.0.1",
-  "description": "monitor web services",
-  "main": "client.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+  "name": "clinet-monitor",
+  "version": "0.3.0",
+  "description": "server monitor client",
+  "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": ""
   },
-  "author": "",
-  "license": "ISC",
+  "license": "MIT",
+  "scripts": {
+    "start": "NODE_ENV=development ./node_modules/.bin/gulp debug",
+    "dist": "NODE_ENV=development ./node_modules/.bin/gulp compile && ./node_modules/.bin/electron-packager ./compile/ Electron-React-Scaffold --out=dist --ignore=dist --asar --platform=darwin --arch=x64 --overwrite --version=0.36.0",
+    "build": "NODE_ENV=production ./node_modules/.bin/gulp compile && ./node_modules/.bin/electron-packager ./compile/ Electron-React-Scaffold --out=dist --ignore=dist --prune --asar --all --overwrite --version=0.36.0"
+  },
+  "files": [
+    "index.js",
+    "index.html",
+    "index.css"
+  ],
+  "engines": {
+    "electron": "0.36.0",
+    "atom-shell": "0.36.0"
+  },
   "dependencies": {
-    "electron": "^0.4.1",
-    "electron-prebuilt": "^1.1.1"
+    "babel": "^6.3.13",
+    "director": "^1.2.8",
+    "react": "^0.14.3",
+    "react-dom": "^0.14.3",
+    "run-sequence": "^1.1.5",
+    "flux": "^2.1.1",
+    "history": "^1.17.0",
+    "flux": "^2.1.1",
+    "history": "^1.17.0",
+    "react": "^0.14.6",
+    "react-dom": "^0.14.6",
+    "react-router": "^1.0.3"
+  },
+  "devDependencies": {
+    "babel-preset-es2015": "^6.3.13",
+    "babel-preset-react": "^6.3.13",
+    "babelify": "^7.2.0",
+    "browserify": "^12.0.1",
+    "del": "^2.2.0",
+    "electron-connect": "^0.3.3",
+    "electron-debug": "^0.5.1",
+    "electron-packager": "^5.1.1",
+    "eslint": "^1.10.3",
+    "eslint-plugin-react": "^3.11.3",
+    "gulp": "^3.9.0",
+    "gulp-eslint": "^1.1.1",
+    "gulp-if": "^2.0.0",
+    "gulp-install": "^0.6.0",
+    "gulp-live-server": "0.0.29",
+    "gulp-minify-css": "^1.2.2",
+    "gulp-sass": "^2.1.1",
+    "gulp-uglify": "^1.5.1",
+    "mkdirp": "^0.5.1",
+    "vinyl-buffer": "^1.0.0",
+    "vinyl-source-stream": "^1.1.0"
+
   }
 }
