--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,8 @@
     "log-rotate": "^0.2.7",
     "nginx-log-parser": "0.0.4",
     "node-dir": "^0.1.12",
+    "nodemailer": "^2.4.2",
+    "nodemailer-ses-transport": "^1.3.1",
     "os-monitor": "^1.0.4",
     "request-headers": "^1.0.0"
   }
